--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -1,15 +1,18 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\hyperlink{structHDB__supergate___1_1BGV__param}{H\+D\+B\+\_\+supergate\+\_\+\+::\+B\+G\+V\+\_\+param} }{\pageref{structHDB__supergate___1_1BGV__param}}{}
+\item\contentsline{section}{\hyperlink{structhelib_1_1Binio}{helib\+::\+Binio} }{\pageref{structhelib_1_1Binio}}{}
 \item\contentsline{section}{\hyperlink{classhe__cmp_1_1Comparator}{he\+\_\+cmp\+::\+Comparator} }{\pageref{classhe__cmp_1_1Comparator}}{}
 \item\contentsline{section}{\hyperlink{classHDB__supergate___1_1CSVIterator}{H\+D\+B\+\_\+supergate\+\_\+\+::\+C\+S\+V\+Iterator} }{\pageref{classHDB__supergate___1_1CSVIterator}}{}
 \item\contentsline{section}{\hyperlink{classHDB__supergate___1_1CSVRange}{H\+D\+B\+\_\+supergate\+\_\+\+::\+C\+S\+V\+Range} }{\pageref{classHDB__supergate___1_1CSVRange}}{}
 \item\contentsline{section}{\hyperlink{classHDB__supergate___1_1CSVRow}{H\+D\+B\+\_\+supergate\+\_\+\+::\+C\+S\+V\+Row} }{\pageref{classHDB__supergate___1_1CSVRow}}{}
 \item\contentsline{section}{\hyperlink{classHDB__supergate___1_1CtxtIndex}{H\+D\+B\+\_\+supergate\+\_\+\+::\+Ctxt\+Index} \\*Class representing an encrypted ciphertext index }{\pageref{classHDB__supergate___1_1CtxtIndex}}{}
 \item\contentsline{section}{\hyperlink{classHDB__supergate___1_1CtxtIndexFile}{H\+D\+B\+\_\+supergate\+\_\+\+::\+Ctxt\+Index\+File} \\*Class representing a ciphertext index file }{\pageref{classHDB__supergate___1_1CtxtIndexFile}}{}
+\item\contentsline{section}{\hyperlink{structhelib_1_1EyeCatcher}{helib\+::\+Eye\+Catcher} }{\pageref{structhelib_1_1EyeCatcher}}{}
 \item\contentsline{section}{\hyperlink{classHDB__supergate___1_1HEQuery}{H\+D\+B\+\_\+supergate\+\_\+\+::\+H\+E\+Query} \\*Object representing a query object used to query the H\+E\+DB }{\pageref{classHDB__supergate___1_1HEQuery}}{}
 \item\contentsline{section}{\hyperlink{classHDB__supergate___1_1PtxtIndex}{H\+D\+B\+\_\+supergate\+\_\+\+::\+Ptxt\+Index} \\*Class representing a plaintext index }{\pageref{classHDB__supergate___1_1PtxtIndex}}{}
 \item\contentsline{section}{\hyperlink{classHDB__supergate___1_1PtxtIndexFile}{H\+D\+B\+\_\+supergate\+\_\+\+::\+Ptxt\+Index\+File} \\*Class representing a collection of Ptxt\+Indexes }{\pageref{classHDB__supergate___1_1PtxtIndexFile}}{}
+\item\contentsline{section}{\hyperlink{structhelib_1_1SerializeHeader}{helib\+::\+Serialize\+Header$<$ T $>$} }{\pageref{structhelib_1_1SerializeHeader}}{}
 \item\contentsline{section}{\hyperlink{classHDB__supergate__server___1_1SERVER}{H\+D\+B\+\_\+supergate\+\_\+server\+\_\+\+::\+S\+E\+R\+V\+ER} \\*Class that contains the DB and is queried upon }{\pageref{classHDB__supergate__server___1_1SERVER}}{}
 \item\contentsline{section}{\hyperlink{structHDB__supergate___1_1STD128__HDB}{H\+D\+B\+\_\+supergate\+\_\+\+::\+S\+T\+D128\+\_\+\+H\+DB} }{\pageref{structHDB__supergate___1_1STD128__HDB}}{}
 \item\contentsline{section}{\hyperlink{structHDB__supergate___1_1TOY__HDB}{H\+D\+B\+\_\+supergate\+\_\+\+::\+T\+O\+Y\+\_\+\+H\+DB} }{\pageref{structHDB__supergate___1_1TOY__HDB}}{}
