--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -152,15 +152,18 @@
 \input{namespaceHDB__supergate__user__}
 \chapter{Class Documentation}
 \input{structHDB__supergate___1_1BGV__param}
+\input{structhelib_1_1Binio}
 \input{classhe__cmp_1_1Comparator}
 \input{classHDB__supergate___1_1CSVIterator}
 \input{classHDB__supergate___1_1CSVRange}
 \input{classHDB__supergate___1_1CSVRow}
 \input{classHDB__supergate___1_1CtxtIndex}
 \input{classHDB__supergate___1_1CtxtIndexFile}
+\input{structhelib_1_1EyeCatcher}
 \input{classHDB__supergate___1_1HEQuery}
 \input{classHDB__supergate___1_1PtxtIndex}
 \input{classHDB__supergate___1_1PtxtIndexFile}
+\input{structhelib_1_1SerializeHeader}
 \input{classHDB__supergate__server___1_1SERVER}
 \input{structHDB__supergate___1_1STD128__HDB}
 \input{structHDB__supergate___1_1TOY__HDB}
